deployment/kubernetes/dev/auth-service.yaml
---
# Source: deployment/templates/auth-service.yaml
# Service for auth service
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: app
  labels:
    helm.sh/chart: deployment-0.1.0
    app.kubernetes.io/name: auth-service
    app.kubernetes.io/instance: app-deployment
    app.kubernetes.io/component: auth
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: auth-service
    app.kubernetes.io/instance: app-deployment
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
---
# Source: deployment/templates/auth-service.yaml
# Deployment for auth service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: app
  labels:
    helm.sh/chart: deployment-0.1.0
    app.kubernetes.io/name: auth-service
    app.kubernetes.io/instance: app-deployment
    app.kubernetes.io/component: auth
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: auth-service
      app.kubernetes.io/instance: app-deployment
  template:
    metadata:
      annotations:
        # Restart pods when image changes
        checksum/image: bmdpbng6MS4yOS1h
        image.repository: "nginx"
        image.tag: "1.29-alpine3.23"
        # Restart pods when ConfigMap changes
        checksum/configmap: eyJ2aXJ0dWFsX3Nl
        # Restart pods when Secret changes
        checksum/secret: eyJkYl9ob3N0Ijoi
      labels:
        app.kubernetes.io/name: auth-service
        app.kubernetes.io/instance: app-deployment
    spec:
      containers:
      - name: auth-service
        image: nginx:1.29-alpine3.23
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
